[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { workspace = true }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_derive = "1.0.188"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = "0.2"
instant = "0.1.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1.12", features = ["wasm-bindgen", "inaccurate"] }
